Fixing picture on mobile

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -108,6 +108,7 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      margin: 0;
 
       img {
         width: 100%;
